modal + 7 meilleurs films

--- a/index.html
+++ b/index.html
@@ -28,6 +28,15 @@
             <div id="bestMovieTitle"></div>
             <img id="bestMovieImg" alt="Meilleur Film Image">
         </div>
+        <div class="container">
+            <div class="grid-container" id="sevenBestMoviesContainer"></div>
+        </div>
+        <!-- Fenêtre modale -->
+        <div id="myModal" class="modal">
+            <h2 id="modalTitle"></h2>
+            <span class="close" onclick="closeModal()">&times;</span>
+            <img class="modal-content" id="modalImg" alt="Meilleur Film Image">
+        </div>
     </main>
 
 
