add all required category

--- a/index.html
+++ b/index.html
@@ -28,16 +28,28 @@
             <div id="bestMovieTitle"></div>
             <img id="bestMovieImg" alt="Meilleur Film Image">
         </div>
+
         <div class="container">
             <div class="grid-container" id="sevenBestMoviesContainer"></div>
         </div>
-        
-        <!-- Fenêtre modale -->
-        <div id="myModal" class="modal">
-            <h2 id="modalTitle"></h2>
-            <span class="close" onclick="closeModal()">&times;</span>
-            <img class="modal-content" id="modalImg" alt="Meilleur Film Image">
+
+        <div class="container">
+            <div class="grid-container" id="sevenBestFamilyMoviesContainer"></div>
         </div>
+
+        <div class="container">
+            <div class="grid-container" id="sevenBestSciFiMoviesContainer"></div>
+        </div>
+
+        <div class="container">
+            <div class="grid-container" id="sevenBestThrillerMoviesContainer"></div>
+
+            <!-- Fenêtre modale -->
+            <div id="myModal" class="modal">
+                <h2 id="modalTitle"></h2>
+                <span class="close" onclick="closeModal()">&times;</span>
+                <img class="modal-content" id="modalImg" alt="Meilleur Film Image">
+            </div>
     </main>
 
 
