--- a/index.html
+++ b/index.html
@@ -49,6 +49,9 @@
                 <h2 id="modalTitle"></h2>
                 <span class="close" onclick="closeModal()">&times;</span>
                 <img class="modal-content" id="modalImg" alt="Meilleur Film Image">
+                <div id="modalGenre"></div>
+                <div id="modalDate"></div>
+                <div id="modalRated"></div>
             </div>
     </main>
 
