add all details

--- a/index.html
+++ b/index.html
@@ -52,6 +52,13 @@
                 <div id="modalGenre"></div>
                 <div id="modalDate"></div>
                 <div id="modalRated"></div>
+                <div id="modalScore"></div>
+                <div id="modalDirector"></div>
+                <div id="modalActors"></div>
+                <div id="modalDuration"></div>
+                <div id="modalCountries"></div>
+                <div id="modalIncome"></div>
+                <div id="modalDescription"></div>
             </div>
     </main>
 
